# sable

./: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
patches/: tauri-lastfm@1.0.2.patch
public/: sable-logo-wip.psd
src/: App.svelte  main.js  reset.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/db/: schema.sql
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  db.rs  db_refactor.rs  main.rs
src-tauri/src/audio/: player.rs
src/lib/: PlayerControls.svelte  utils.js
src/lib/comp/: Album.svelte  AlbumCover.svelte  AlbumSelector.svelte  CardListItem.svelte  IconButton.svelte  PopoutWindow.svelte  Slider.svelte  SongSelector.svelte  TagEditor.svelte  Toast.svelte  Toasts.svelte  Window.svelte  WindowGroup.svelte  WindowStack.svelte  WindowTabs.svelte
src/lib/stores/: audioPlayer.js  lastfmAPI.js  notifications.js  queue.js  songLibrary.js  stronghold.js  tagEditor.js  userConfig.js  windowManager.js
src/lib/windows/: AlbumViewer.svelte  Albums.svelte  ArtistPage.svelte  Artists.svelte  AudioControls.svelte  PlayerControls.svelte  SongQueue.svelte  Songs.svelte  TrackInfo.svelte
