[package]
name = "music-player"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "http-request", "path-all", "protocol-asset", "fs-all", "shell-open"] }
tauri-plugin-stronghold = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
symphonia = "0.5.4"
jwalk = "0.8.1"
audiotags = "0.5.0"
rodio = { version = "0.18.1", features = ["symphonia-all"] }
rust-argon2 = "2.1.0"
hex = "0.4.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
