[package]
name = "Sable"
version = "0.1.2"
description = "Sable"
authors = ["Andrei Neacsu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
symphonia = "0.5.4"
jwalk = "0.8.1"
audiotags = "0.5.0"
rodio = { version = "0.18.1", features = ["symphonia-all"] }
rust-argon2 = "2.1.0"
hex = "0.4.3"
tauri-plugin-http = "2.0.0-beta.9"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-fs = "2.0.0-beta.9"
tauri-plugin-stronghold = "2.0.0-beta.6"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
